Add manual check button and improve post detection

--- a/popup.html
+++ b/popup.html
@@ -11,6 +11,10 @@
   <h3>Grupuri Monitorizate:</h3>
   <div id="groupsList"></div>
   
+  <button id="checkNowBtn" style="width: 100%; padding: 10px; margin: 10px 0; background: #4CAF50; color: white; border: none; border-radius: 5px; cursor: pointer; font-weight: bold;">
+    🔄 Verifică Acum Toate Grupurile
+  </button>
+  
   <hr>
   
   <h3>Postări Detectate:</h3>
